# projectnexus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  package-lock.json  package.json  projectnexus_specdoc.md  pyproject.toml
.claude/memory/: MEMORY.md  anomaly-tuning.md  api-details.md  feedback_verify_external_apis.md  infrastructure-issues.md  kalshi-api-features.md  kalshi_api_reference.md  milestone_3_2_plan.md  patterns.md  project_kalshi_api_migration.md
convex/: alerts.ts  candlesticks.ts  nexusSync.ts  queries.ts  schema.ts  users.ts
convex/_generated/: api.d.ts
docs/: event-stream-migration.md  fly-deployment-troubleshooting.md  kalshi-api-integration-plan.md  milestone-4.2-plan.md  milestone-4.2-refined-plan.md  phase-5-implementation-plan.md
nexus/: __init__.py  cli.py
nexus/adapters/: auth.py  base.py  kalshi.py  polymarket.py
nexus/alerts/: __init__.py  creator.py
nexus/api/: app.py  cache.py  server.py
nexus/clustering/: __init__.py  clusterer.py  llm_client.py  prompts.py
nexus/core/: __init__.py  config.py  logging.py  types.py
sql/: schema.sql
tests/: conftest.py  test_alert_creator.py  test_anomaly_store.py  test_api.py  test_auth.py  test_bus.py  test_candle_aggregator.py  test_cluster_store.py  test_clusterer.py  test_correlator.py  test_cross_platform.py  test_cross_platform_store.py  test_detector.py  test_discovery.py  test_health.py  test_integrity.py  test_kalshi_rest.py  test_kalshi_ws.py  test_llm_client.py  test_llm_narrator.py  test_manager.py  test_metrics.py  test_narrative.py  test_news.py  test_polymarket.py  test_postgres.py  test_prompts.py  test_ring_buffer.py  test_series_detector.py  test_store.py  test_sync.py  test_templates.py  test_types.py  test_windows.py
webapp/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
(+77 files in other folders)
