[tool.poetry]
name = "nexus"
version = "0.1.0"
description = "Real-time prediction market intelligence engine"
authors = ["algorhythmic"]
readme = "README.md"
packages = [{include = "nexus"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
cryptography = "^44.0.0"
websockets = "^14.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^24.0.0"
rich = "^13.7.0"
typer = ">=0.12.0"
python-dotenv = "^1.0.0"
anthropic = "^0.84.0"
starlette = "^0.46.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
asyncpg = {version = "^0.30.0", optional = true}

[tool.poetry.extras]
postgres = ["asyncpg"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
nexus = "nexus.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "postgres: PostgreSQL integration tests (require TEST_POSTGRES_DSN)",
]

[tool.coverage.run]
source = ["nexus"]
branch = true
